Updated anchor tag and background colour.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: gold;
+  background-color: #ECF2FF /*gold*/;
 }
 
 hr {
@@ -22,3 +22,5 @@ h3 {
 .border {
   border-radius: 100%;
 }
+
+  <a href="HTML-Personal site\index.html">Home page</a>
